[gd_scene load_steps=8 format=3 uid="uid://6nyq5n8mewob"]

[ext_resource type="Script" path="res://scenes/pause_screen.gd" id="1_0534l"]
[ext_resource type="Texture2D" uid="uid://7phccceq2wj2" path="res://assets/pause-bg.png" id="1_hs36b"]
[ext_resource type="Texture2D" uid="uid://pjse4bnhcmdx" path="res://assets/exit-crab-new.png" id="2_06giw"]
[ext_resource type="Texture2D" uid="uid://cbl6i1tipale4" path="res://assets/exit-crab-hover-new.png" id="3_m2cta"]
[ext_resource type="Texture2D" uid="uid://dtdkhwx38hvx0" path="res://assets/resume-button.png" id="4_ethij"]
[ext_resource type="Texture2D" uid="uid://dyp0dreoev8dn" path="res://assets/resume-button-hover.png" id="5_g3ifj"]
[ext_resource type="AudioStream" uid="uid://mr8eehr5uvpq" path="res://assets/button-click.mp3" id="7_eckb7"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0534l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.815686)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hs36b")
stretch_mode = 5

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_eckb7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ExitButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_06giw")
texture_pressed = ExtResource("2_06giw")
texture_hover = ExtResource("3_m2cta")
stretch_mode = 4

[node name="ResumeButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_ethij")
texture_pressed = ExtResource("4_ethij")
texture_hover = ExtResource("5_g3ifj")
stretch_mode = 4
